--- a/app/src/main/res/layout/activity_cbctabel.xml
+++ b/app/src/main/res/layout/activity_cbctabel.xml
@@ -550,9 +550,15 @@
 
     </TableLayout>
 
-
-
-
+    <TextView
+        android:id="@+id/dipoutput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
