--- a/app/src/main/res/layout/activity_thyroid.xml
+++ b/app/src/main/res/layout/activity_thyroid.xml
@@ -28,6 +28,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="24dp">
@@ -53,6 +55,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
@@ -86,6 +90,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
@@ -121,6 +127,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
@@ -161,6 +169,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="30dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:padding="12dp"
 
             android:text="Check"
