--- a/app/src/main/res/layout/activity_lipid123.xml
+++ b/app/src/main/res/layout/activity_lipid123.xml
@@ -25,6 +25,9 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="24dp"
@@ -57,6 +60,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="24dp"
@@ -92,6 +97,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="24dp"
@@ -128,6 +135,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="24dp"
@@ -166,6 +175,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="24dp"
@@ -203,6 +214,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="24dp"
@@ -239,6 +252,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="24dp"
@@ -278,6 +293,8 @@
             android:background="#00090B8A"
             app:endIconMode="clear_text"
             app:helperText="Mandatory"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:helperTextTextColor="@color/black"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="24dp"
@@ -313,6 +330,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="30dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:padding="12dp"
 
             android:text="Check"
