--- a/app/src/main/res/layout/activity_hba1c.xml
+++ b/app/src/main/res/layout/activity_hba1c.xml
@@ -46,7 +46,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginBottom="200dp"
-
+        app:icon="@drawable/ic_baseline_analytics_24"
         android:padding="12dp"
         android:text="Check"
         app:cornerRadius="110dp"
