--- a/app/src/main/res/layout/activity_lipid123.xml
+++ b/app/src/main/res/layout/activity_lipid123.xml
@@ -332,6 +332,7 @@
             android:layout_marginBottom="30dp"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
+            app:icon="@drawable/ic_baseline_analytics_24"
             android:padding="12dp"
 
             android:text="Check"
