--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -99,7 +99,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_black"
-                        android:text="General"
+                        android:text="CBC"
                         android:textColor="#1F58EF"
                         android:textSize="22dp" />
                 </LinearLayout>
@@ -145,7 +145,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_black"
-                        android:text="Transport"
+                        android:text="LIPID"
                         android:textColor="#5B46AF"
                         android:textSize="22dp" />
                     />
@@ -200,7 +200,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_black"
-                        android:text="Shopping"
+                        android:text="THYROID"
                         android:textColor="#D84DCA"
                         android:textSize="22dp" />
                 </LinearLayout>
@@ -246,7 +246,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_black"
-                        android:text="Bills"
+                        android:text="SGPT"
                         android:textColor="#C6500F"
                         android:textSize="22dp" />
                     />
@@ -300,7 +300,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_black"
-                        android:text="Entertaiment"
+                        android:text="CRP"
                         android:textColor="#5569BF"
                         android:textSize="22dp" />
 
@@ -347,7 +347,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_black"
-                        android:text="Grocery"
+                        android:text="SUGER"
                         android:textColor="#257051"
                         android:textSize="22dp" />
                     />
