--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -5,7 +5,6 @@
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@color/background_color"
    >
 
@@ -14,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/dashbord_bacground" />
+        android:src="@drawable/dashbord_bacground">
+    </ImageView>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -180,11 +180,11 @@
 
 
                 <LinearLayout
+                    android:id="@+id/thyroid"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/background_color_50"
                     android:gravity="center"
-                    android:id="@+id/thyroid"
                     android:orientation="vertical">
 
                     <ImageView
@@ -230,7 +230,7 @@
                     android:layout_height="match_parent"
                     android:background="@color/background_color_50"
                     android:gravity="center"
-                    android:id="@+id/hba1c"
+                    android:id="@+id/sgpt"
                     android:orientation="vertical">
 
                     <ImageView
@@ -332,6 +332,7 @@
                     android:layout_height="match_parent"
                     android:background="@color/background_color_50"
                     android:gravity="center"
+                    android:id="@+id/generalsugar"
                     android:orientation="vertical">
 
                     <ImageView
@@ -354,6 +355,8 @@
                 </LinearLayout>
 
 
+
+
             </androidx.cardview.widget.CardView>
 
 
@@ -372,11 +375,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/root"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
-
-
-
-
-
 
 
 
