--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -234,13 +234,13 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_margin="20dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_margin="5dp"
                         android:background="@drawable/bills_img_background"
-                        android:padding="25dp"
-                        android:src="@drawable/invoice"
-                        app:tint="#fff"></ImageView>
+                        android:padding="5dp"
+                        android:src="@drawable/sgptp"
+                        ></ImageView>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -290,11 +290,11 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="20dp"
+                        android:layout_margin="5dp"
                         android:background="@drawable/entertainment_img_background"
-                        android:padding="25dp"
-                        android:src="@drawable/video_camera"
-                        app:tint="#fff"></ImageView>
+                        android:padding="5dp"
+                        android:src="@drawable/crpp"
+                        ></ImageView>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -338,11 +338,10 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="20dp"
+                        android:layout_margin="5dp"
                         android:background="@drawable/grocery_img_background"
-                        android:padding="25dp"
-                        android:src="@drawable/groceries"
-                        app:tint="#fff"></ImageView>
+                        android:padding="10dp"
+                        android:src="@drawable/suderp"></ImageView>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -371,13 +370,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:layout_marginBottom="16dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/root"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent">
-
-
-
 
 
     </androidx.cardview.widget.CardView>
