--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -30,8 +30,9 @@
         android:layout_height="150dp"
         android:layout_above="@+id/heightlayout"
         android:layout_marginLeft="20dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="49dp"
         android:layout_toStartOf="@+id/centerverticaline"
         android:background="@drawable/malefemalenotfocus">
 
@@ -60,19 +61,17 @@
     </RelativeLayout>
 
 
-
-
-
     <RelativeLayout
+        android:id="@+id/female"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_toEndOf="@+id/centerverticaline"
-        android:background="@drawable/malefemalenotfocus"
         android:layout_above="@+id/heightlayout"
-        android:layout_marginBottom="35dp"
+        android:layout_marginStart="23dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/female">
+        android:layout_marginBottom="51dp"
+        android:layout_toEndOf="@+id/centerverticaline"
+        android:background="@drawable/malefemalenotfocus">
 
 
         <ImageView
@@ -85,29 +84,18 @@
 
 
         <TextView
+            android:id="@+id/textfemale"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:id="@+id/textfemale"
-            android:text="Female"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
-            android:textAlignment="center">
-        </TextView>
+            android:text="Female"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"></TextView>
 
     </RelativeLayout>
-
-
-
-
-
-
-
-
-
-
 
     <RelativeLayout
         android:id="@+id/weight"
@@ -115,7 +103,7 @@
         android:layout_height="150dp"
         android:layout_below="@+id/heightlayout"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="70dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         android:layout_toStartOf="@+id/centerverticaline"
@@ -186,15 +174,13 @@
     </RelativeLayout>
 
 
-
-
     <RelativeLayout
         android:id="@+id/age"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_below="@+id/heightlayout"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="70dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         android:layout_toEndOf="@+id/centerverticaline"
@@ -261,29 +247,6 @@
     </RelativeLayout>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <RelativeLayout
         android:id="@+id/heightlayout"
         android:layout_width="340dp"
@@ -292,9 +255,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="-50dp"
-        android:background="@drawable/cardbackground"
-        >
+        android:layout_marginBottom="-33dp"
+        android:background="@drawable/cardbackground">
 
 
         <TextView
@@ -326,13 +288,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="cm"
-            android:textSize="20sp"
-            android:textColor="@color/white"
             android:layout_centerInParent="true"
-            android:layout_toEndOf="@id/currentheight"
             android:layout_marginStart="20dp"
-            >
+            android:layout_toEndOf="@id/currentheight"
+            android:text="cm"
+            android:textColor="@color/white"
+            android:textSize="20sp">
 
         </TextView>
 
@@ -344,8 +305,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"
-            android:thumbTint="@color/white"
-            android:progressTint="#FF4c4c">
+            android:progressTint="#FF4c4c"
+            android:thumbTint="@color/white">
 
         </SeekBar>
 
@@ -359,7 +320,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="130dp"
+        android:layout_marginBottom="85dp"
         android:background="@drawable/buttonbackground"
         android:text="Calcuate Your BMI"
         android:textColor="@color/white"
