--- a/app/src/main/res/layout/activity_general_sugar.xml
+++ b/app/src/main/res/layout/activity_general_sugar.xml
@@ -36,9 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:orientation="horizontal"
-
-            >
+            android:orientation="horizontal">
 
 
             <androidx.cardview.widget.CardView
@@ -76,72 +74,19 @@
                         android:text="HBA1C"
                         android:textColor="#1F58EF"
                         android:textSize="22dp" />
+
+
                 </LinearLayout>
 
 
             </androidx.cardview.widget.CardView>
 
 
-            <!-- -->
+            <!-- --></LinearLayout>
 
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:orientation="horizontal"
-
-            >
 
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="30dp"
-                app:cardElevation="0dp">
-
-
-                <LinearLayout
-                    android:id="@+id/randomsugar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/background_color_50"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_margin="5dp"
-                        android:background="@drawable/back"
-                        android:padding="11dp"
-                        android:src="@drawable/randomfinal"></ImageView>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/lato_black"
-                        android:text="RANDOM SUGAR"
-                        android:textColor="#D84DCA"
-                        android:textSize="22dp" />
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-
-            <!-- -->
-
-
-        </LinearLayout>
 
 
         <LinearLayout
